--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
-1
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cartel Destacado — Frase Motivadora</title>
+  <meta name="description" content="Lo más inteligente que uno puede hacer en su vida es enfocarse en su propio progreso, en su bienestar y su felicidad.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg1:#0f1226;
+      --bg2:#141a3a;
+      --text:#e9ecff;
+      --accent:#7aa2ff;
+      --accent2:#9c6bff;
+      --glow:#b0c7ff;
+      --card:#111527cc;
+      --ok:#36d399;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 800px at 85% -10%, #2a1f73 0%, transparent 60%),
+        radial-gradient(1000px 600px at -10% 100%, #1b6cff30 0%, transparent 60%),
+        linear-gradient(135deg,var(--bg1),var(--bg2));
+      overflow-x:hidden;
+    }
+
+    /* partículas sutiles */
+    .dots{
+      position:fixed; inset:0; pointer-events:none; opacity:.25;
+      background-image: radial-gradient(#fff 1px, transparent 1px);
+      background-size: 18px 18px;
+      mask-image: radial-gradient(900px 600px at 50% 50%, #000 40%, transparent 70%);
+    }
+
+    .container{
+      min-height:100%;
+      display:grid;
+      place-items:center;
+      padding: clamp(24px, 4vw, 48px);
+    }
+
+    .card{
+      width:min(900px, 92vw);
+      background:linear-gradient(180deg,#ffffff08,#ffffff03);
+      border:1px solid #ffffff22;
+      border-radius:24px;
+      padding: clamp(20px, 5vw, 36px);
+      box-shadow:
+        0 10px 35px #00000066,
+        0 0 0 1px #ffffff10 inset;
+      backdrop-filter: blur(8px);
+      position:relative;
+      overflow:hidden;
+    }
+
+    /* brillo decorativo */
+    .card::before{
+      content:"";
+      position:absolute; inset:-2px;
+      background: conic-gradient(from 0deg, #79a8ff 0%, #a374ff 25%, #79a8ff 50%, #a374ff 75%, #79a8ff 100%);
+      filter: blur(22px);
+      opacity:.18;
+      z-index:0;
+      animation: rotate 14s linear infinite;
+    }
+    @keyframes rotate{to{transform:rotate(1turn)}}
+
+    header{
+      display:flex; align-items:center; gap:14px; margin-bottom:20px; position:relative; z-index:1;
+    }
+    .pill{
+      padding:6px 12px; border-radius:999px; font-weight:600; letter-spacing:.3px;
+      background: linear-gradient(90deg, #6ea1ff33, #a777ff33);
+      border:1px solid #ffffff25;
+    }
+
+    h1{
+      margin:0;
+      font-size:clamp(24px, 4.2vw, 40px);
+      line-height:1.1;
+      font-weight:800;
+      text-shadow: 0 2px 14px #00000080;
+    }
+
+    .quote{
+      position:relative;
+      margin-top:18px;
+      padding: clamp(18px, 3.2vw, 28px);
+      border-radius:18px;
+      background:#0b0f25;
+      border:2px solid #6f94ff66;
+      box-shadow:
+        0 0 18px 2px #7aa2ff30,
+        inset 0 0 24px #7aa2ff14;
+      font-size:clamp(18px, 2.5vw, 24px);
+      font-weight:600;
+      line-height:1.4;
+    }
+
+    /* CARTEL parpadeante estilo neón */
+    .sign{
+      display:inline-flex; align-items:center; gap:10px;
+      padding:10px 16px;
+      border-radius:12px;
+      font-weight:800;
+      letter-spacing:.5px;
+      text-transform:uppercase;
+      color:#fff;
+      margin-bottom:14px;
+      background: radial-gradient(120% 140% at 10% 10%, #7aa2ff, #9c6bff 70%);
+      border:2px solid #ffffff55;
+      filter: drop-shadow(0 0 12px #8fb3ff) drop-shadow(0 0 24px #9c6bff);
+      animation: blink 1.3s steps(2,end) infinite, pulse 4s ease-in-out infinite;
+    }
+    .dot{width:10px;height:10px;border-radius:50%;background:#fff;box-shadow:0 0 14px 4px #fff}
+    @keyframes blink{50%{opacity:.45}}
+    @keyframes pulse{
+      0%,100%{transform:translateY(0) scale(1)}
+      50%{transform:translateY(-1px) scale(1.02)}
+    }
+
+    .text{
+      position:relative; z-index:1;
+      background:
+        linear-gradient(90deg, #eaf2ff, #dcd4ff 50%, #eaf2ff);
+      -webkit-background-clip:text; background-clip:text;
+      color:transparent;
+      text-shadow: 0 0 18px #7aa2ff40;
+    }
+
+    .footer{
+      margin-top:22px; display:flex; justify-content:space-between; gap:12px; flex-wrap:wrap; opacity:.9; font-size:14px
+    }
+    .btn{
+      appearance:none; cursor:pointer; border:none; border-radius:12px;
+      padding:12px 16px; font-weight:700; color:#0b0f25;
+      background:linear-gradient(90deg,#84ffe0,#63c1ff);
+      box-shadow: 0 12px 24px #2dd4bf33, 0 0 0 1px #ffffff80 inset;
+      transition: transform .15s ease, filter .15s ease;
+    }
+    .btn:hover{transform:translateY(-2px)}
+    .btn:active{transform:translateY(0)}
+    .ok{color:var(--ok); font-weight:700}
+    .brand{
+      color:#aeb8ff; font-weight:600
+    }
+
+    /* brillo barrido sobre el cartel */
+    .shine{
+      position:absolute; inset:2px; border-radius:16px; overflow:hidden; pointer-events:none;
+    }
+    .shine::before{
+      content:""; position:absolute; top:-20%; left:-30%;
+      width:50%; height:140%;
+      transform:skewX(-20deg);
+      background:linear-gradient(90deg, transparent, #ffffff66, transparent);
+      animation: sweep 3.6s ease-in-out infinite;
+    }
+    @keyframes sweep{
+      0%{left:-40%}
+      60%{left:120%}
+      100%{left:120%}
+    }
+
+    /* responsive detalle para pantallas muy pequeñas */
+    @media (max-width:380px){
+      .sign{font-size:12px}
