--- a/index.html
+++ b/index.html
@@ -54,15 +54,13 @@
       <span class="dot" aria-hidden="true"></span>
     </div>
 
-    <h1>Enfócate en ti</h1>
-
     <div class="quote">
       “Lo más inteligente que uno puede hacer en su vida es enfocarse en su propio progreso,
       en su bienestar y su felicidad.”
     </div>
 
     <div class="footer">
-      <span>© 2025 • Tu nombre</span>
+      <span>© 2025 •</span>
       <button id="copiar">Copiar frase</button>
     </div>
   </section>
