--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Cartel Destacado</title>
+<title>Frase Destacada</title>
 <style>
   :root{
     --bg:#0e1320; --panel:#121a2f; --borde:#2b3b76; --texto:#eaf0ff; --acento:#7aa2ff; --acento2:#9c6bff;
